<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.awesomekris.android.newsbox.NewsDetailActivityFragment"
    tools:showIn="@layout/activity_news_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/black">

            <TextView
                android:id="@+id/detail_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/headline_margin"
                android:fontFamily="sans-serif-condensed"
                android:paddingEnd="@dimen/list_side_margin"
                android:paddingStart="@dimen/list_side_margin"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:contentDescription="@string/a11y_headline"/>

            <TextView
                android:id="@+id/detail_publication_date"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingEnd="@dimen/list_side_margin"
                android:paddingStart="@dimen/list_side_margin"
                android:textColor="@android:color/white"
                android:contentDescription="@string/a11y_date"/>

            <TextView
                android:id="@+id/detail_trail_text"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_side_margin"
                android:paddingEnd="@dimen/list_side_margin"
                android:paddingStart="@dimen/list_side_margin"
                android:textColor="@android:color/white"
                android:contentDescription="@string/a11y_trail_text"/>

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:contentDescription="@string/a11y_admob"/>

        <TextView
            android:id="@+id/detail_body_text_summary"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/body_text_summary_margin"
            android:fontFamily="serif"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:contentDescription="@string/a11y_body_text_summary"/>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
